# sentinel

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
agents/docs/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  FILE_MAP.md  FRONTEND.md  PROMPTS.md
docs/: README.md  agent-web-improvements.md  sentinel-development-direction.md
docs/agent/: AF-01-persistent-run-history-audit-log.md  AF-02-saved-analysis-playbooks.md  AF-03-batch-evaluation-runner.md  AG-01-provider-fallback-model-strategy.md  AG-02-external-api-resilience.md  AG-03-prompt-injection-defense.md  AG-04-structured-tool-output.md  AG-05-report-service-unification.md  AG-06-persistent-checkpoint-workspace.md  AG-07-hitl-mutation-approval.md  AG-08-query-filter-expansion-large-trace.md  AG-09-cli-resilience-operator-ux.md  README.md
docs/web/: README.md  WEB-01-report-viewer-security.md  WEB-02-scheduler-process-separation.md  WEB-03-background-job-generation.md  WEB-04-auth-and-rbac-foundation.md  WEB-05-artifact-naming-and-runtime-contract.md  WEB-06-validation-feedback-and-form-ux.md  WEB-07-sorting-timezone-and-report-listing.md  WEB-08-health-readiness-and-telemetry.md  WEB-09-asset-pipeline-and-csp.md  WF-01-trace-explorer.md  WF-02-prompt-registry-and-diff.md  WF-03-evaluation-campaign-dashboard.md  WF-04-alert-center-and-slo-monitor.md  WF-05-dataset-builder-from-trace.md  (+4 more)
sentinel/: __init__.py  agent.py  alerts.py  approval.py  audit.py  auth.py  checkpoint.py  cli.py  config.py  playbook.py  prompts.py  report_template.html  schema.py  settings.py  subagents.py
(+52 files in other folders)
