[project]
name = "sentinel"
version = "0.0.1"
description = "Sentinel — Langfuse LLMOps Agent (Deep Agents 기반)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.4",
    "langchain>=1.2",
    "langchain-openai>=1.1.10",
    "langfuse>=2.0",
    "langgraph>=1.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3"]
gemini = ["langchain-google-genai>=2.1"]
ollama = ["langchain-ollama>=0.3"]
all-providers = [
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "langchain-ollama>=0.3",
]

[project.scripts]
sentinel = "main:main"
